# fhe_llm

./: .gitignore  FHE_LLM_Project_Presentation.md  README.md  README_CONCRETE_ML.md  check_weights.py  concrete_ml_basic.py  concrete_ml_fhe.py  convert.py  extract_weights.py  fhe_compatible_weights.pt  fhe_convert.py  fhe_convert_simple.py  fhe_example_concrete.py  fhe_full_implementation.py  fhe_nanogpt.py  fhe_nanogpt_concrete.py  fhe_nanogpt_concrete_v2.py  fhe_nanogpt_concrete_v3.py  fhe_nanogpt_final.py  fhe_nanogpt_final_v2.py  fhe_nanogpt_inference.py  fhe_nanogpt_reduced_bitwidth.py  fhe_nanogpt_shakespeare.pt  fhe_shakespeare_model.pt  full_fhe_shakespeare_model.pt  processed_files.db  setup_concrete_ml.py  setup_env.py  setup_hellm.sh  simple_fhe_shakespeare.py  simple_fhe_shakespeare_model.pt  test_tiny_fhe_gpt.py  train_fhe_nanogpt.py  train_fhe_nanogpt_shakespeare.py  trained_shakespeare_gpt.pt
.artifacts/: _clear_forward_proxy.1.initial.graph.txt  _clear_forward_proxy.10.after-fusing.graph.txt  _clear_forward_proxy.11.after-fusing.graph.txt  _clear_forward_proxy.12.after-fusing.graph.txt  _clear_forward_proxy.13.after-fusing.graph.txt  _clear_forward_proxy.14.after-fusing.graph.txt  _clear_forward_proxy.15.after-fusing.graph.txt  _clear_forward_proxy.16.after-fusing.graph.txt  _clear_forward_proxy.17.after-fusing.graph.txt  _clear_forward_proxy.18.after-fusing.graph.txt  _clear_forward_proxy.19.after-fusing.graph.txt  _clear_forward_proxy.2.after-fusing.graph.txt  _clear_forward_proxy.20.after-fusing.graph.txt  _clear_forward_proxy.21.after-fusing.graph.txt  _clear_forward_proxy.22.after-fusing.graph.txt  _clear_forward_proxy.23.after-fusing.graph.txt  _clear_forward_proxy.24.after-fusing.graph.txt  _clear_forward_proxy.25.final.graph.txt  _clear_forward_proxy.3.after-fusing.graph.txt  _clear_forward_proxy.4.after-fusing.graph.txt  _clear_forward_proxy.5.after-fusing.graph.txt  _clear_forward_proxy.6.after-fusing.graph.txt  _clear_forward_proxy.7.after-fusing.graph.txt  _clear_forward_proxy.8.after-fusing.graph.txt  _clear_forward_proxy.9.after-fusing.graph.txt  environment.txt  requirements.txt  traceback.txt
FHE_LLM/: FHE_LLM.md
checkpoints/: full_fhe_shakespeare_best.pt
ciphertext/: CMakeLists.txt  LICENSE  README.md  convert.py  metric.py
ciphertext/cmake/: BuildType.cmake  CCache.cmake  CompilerWarnings.cmake  Config.cmake.in  FindNCCL.cmake
ciphertext/conda/: hellm-bert-env.yml
ciphertext/examples/: CMakeLists.txt  backward-bert-multi.cpp  backward-time.cpp  bert-matmul-backward.cpp  bert-matmul.cpp  bert-test.cpp  convert2.cpp  keygen.cpp
ciphertext/include/HELLM/: DevUtils.hpp  Exp.hpp  HEMMer.hpp  HETensor.hpp  LNRemezCoeff.hpp  LayerNorm.hpp  LoRA.hpp  LoRARemezCoeff.hpp  Loss.hpp  LossRemezCoeff.hpp  MatrixUtils.hpp  ModelArgs.hpp  ReLU.hpp  Softmax.hpp  SoftmaxRemezCoeff.hpp  Tanh.hpp  TanhRemezCoeff.hpp  TorchTransformerBlock.hpp  TransformerBlock.hpp  hellm.h
ciphertext/include/HELLM/utils/: check_macros.hpp
ciphertext/src/: Exp.cpp  HEMMer.cpp  LayerNorm.cpp  LoRA.cpp  Loss.cpp  MatrixUtils.cpp  ReLU.cpp  Softmax.cpp  Tanh.cpp  TorchTransformerBlock.cpp  TransformerBlock.cpp
ciphertext/test/: CMakeLists.txt  HELLMTestBase.hpp  HEMMerTest_tmp.cpp
concrete_ml/: README_CONCRETE_ML.md
key/: decryption.key  decryption_key.pth  encryption.key  encryption_key.pth
nanoGPT/: concrete_test.py  fhe_inference.py  fhe_model.py  inference.py  quantization.py  test_fhe_model.py  train.py
plaintext/: .gitignore  eval.py  (+9 more)
(+49 files in other folders)
